--- a/Com_Rom/test-output/index.html
+++ b/Com_Rom/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\Deepan\eclipse-workspace\Com_Rom\testng.xml</span>
+                    <span>C:\Users\Deepan\git\Com_Rom\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -134,7 +134,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Deepan\eclipse-workspace\Com_Rom\testng.xml</span>
+            <span class="header-content">C:\Users\Deepan\git\Com_Rom\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -191,12 +191,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'RPLogin')
 data.setCell(0, 2, 'Smoke.Com_Rom.SmokeTest')
-data.setCell(0, 3, 10970);
+data.setCell(0, 3, 12257);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -229,7 +229,7 @@ return data;
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">CloseDriver</span>
-                <span class="method-start">10972 ms</span>
+                <span class="method-start">12259 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
